--- a/src/styles/index.module.less
+++ b/src/styles/index.module.less
@@ -1,22 +1,38 @@
-.wrapper {
-  min-height: 100vh;
+@import './smart-grid.less';
+
+body {
   background: center / cover no-repeat url('../images/bg.png');
+  min-height: 100vh;
+}
+
+.wrapper {
+  .wrapper();
   color: #fff;
-  display: flex;
-  flex-wrap: wrap;
+}
+
+.content {
+  .row-flex();
+  .md(flex-direction, column);
 }
 
 .leftSide {
-  flex: 1;
+  .col();
+  .size(7);
+  .size-xl(6);
+  .size-lg(5);
+  .size-md(12);
+  .md(margin-top, 2rem);
+  .xs(text-align, center);
   align-self: center;
-  margin-left: 3rem;
 
   h1 {
     margin-bottom: 1rem;
+    .xs(font-size, 2.5rem);
   }
   h2 {
     font-weight: normal;
     margin-bottom: 1.5rem;
+    .xs(font-size, 1.5rem);
   }
 }
 
@@ -24,6 +40,13 @@
   a {
     color: #fff;
     margin-right: 1rem;
+    transition: all 0.2s;
+
+    &:hover,
+    &:focus {
+      color: goldenrod;
+      transition: all 0.2s;
+    }
   }
 }
 
@@ -32,36 +55,46 @@
 }
 
 .rightSide {
-  margin: 2rem 1rem;
-  max-width: 45%;
+  .col();
+  .size(5);
+  .size-xl(6);
+  .size-lg(7);
+  .size-md(12);
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  min-height: calc(100vh - 4rem);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  .md(min-height, auto);
 }
 
 .aboutMe {
   h3 {
+    .md(display, none);
   }
 
-  div {
+  &__content {
     display: flex;
   }
 
   p {
+    .md(align-self, center);
   }
 
   img {
     display: block;
-    max-width: 100%;
+    max-width: 150px;
     align-self: flex-start;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin-left: 0.5rem;
     border-radius: 50%;
+    .md-block({margin-top: 0; margin-left: 0; margin-right: 1rem; order: -1;});
+    .xs(display, none);
   }
 }
 
 .navbar {
-  width: 70%;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -76,9 +109,23 @@
   text-align: center;
   font-weight: bold;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background: #fff;
-    color: #000;
+    color: #222;
     transition: all 0.2s;
+  }
+}
+
+@media screen and (min-height: 850px) {
+  .rightSide {
+    justify-content: center;
+  }
+}
+@media screen and (min-height: 850px) and (max-width: @break_md) {
+  .wrapper {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
   }
 }
