--- a/src/styles/smart-grid.less
+++ b/src/styles/smart-grid.less
@@ -1,29 +1,38 @@
 @columns: 12;
 @atom: (100% / @columns);
 
+@break_xl: 1200px;
 @break_lg: 1100px;
 @break_md: 960px;
 @break_sm: 780px;
-@break_xs: 560px;
+@break_xs: 530px;
 
 @offset: 30px;
+@offset_xl: @offset;
 @offset_lg: @offset;
 @offset_md: @offset;
 @offset_sm: @offset;
 @offset_xs: @offset;
 
 @offset_one_side: (@offset / 2);
+@offset_xl_one_side: (@offset_xl / 2);
 @offset_lg_one_side: (@offset_lg / 2);
 @offset_md_one_side: (@offset_md / 2);
 @offset_sm_one_side: (@offset_sm / 2);
 @offset_xs_one_side: (@offset_xs / 2);
 
 @fields: 30px;
+@fields_md: 50px;
 @fields_sm: 15px;
 
 .wrapper-full(){
     padding-left: @fields;
     padding-right: @fields;
+
+    .md-block({
+        padding-left: @fields_md;
+        padding-right: @fields_md;
+    });
 
     .sm-block({
         padding-left: @fields_sm;
@@ -87,6 +96,11 @@
     width: ~"calc(@{val} - @{offset})";
 }
 
+.size-xl(@n){
+    @val: 100% / @columns * @n;
+    .xl(width, ~"calc(@{val} - @{offset_xl})");
+}
+
 .size-lg(@n){
     @val: 100% / @columns * @n;
     .lg(width, ~"calc(@{val} - @{offset_lg})");
@@ -137,6 +151,38 @@
 .shift-padding-right(@n){
     @val: 100% / @columns * @n;
     padding-right: ~"calc(@{val} + @{offset_one_side})";
+}
+
+.shift-xl(@n){
+    @val: 100% / @columns * @n;
+    .xl(margin-left, ~"calc(@{val} + @{offset_xl_one_side})");
+    .xl(margin-right, ~"calc(@{val} + @{offset_xl_one_side})");
+}
+
+.shift-xl-left(@n){
+    @val: 100% / @columns * @n;
+    .xl(margin-left, ~"calc(@{val} + @{offset_xl_one_side})");
+}
+
+.shift-xl-right(@n){
+    @val: 100% / @columns * @n;
+    .xl(margin-right, ~"calc(@{val} + @{offset_xl_one_side})");
+}
+
+.shift-xl-padding(@n){
+    @val: 100% / @columns * @n;
+    .xl(padding-left, ~"calc(@{val} + @{offset_xl_one_side})");
+    .xl(padding-right, ~"calc(@{val} + @{offset_xl_one_side})");
+}
+
+.shift-xl-padding-left(@n){
+    @val: 100% / @columns * @n;
+    .xl(padding-left, ~"calc(@{val} + @{offset_xl_one_side})");
+}
+
+.shift-xl-padding-right(@n){
+    @val: 100% / @columns * @n;
+    .xl(padding-right, ~"calc(@{val} + @{offset_xl_one_side})");
 }
 
 .shift-lg(@n){
@@ -265,6 +311,18 @@
 .shift-xs-padding-right(@n){
     @val: 100% / @columns * @n;
     .xs(padding-right, ~"calc(@{val} + @{offset_xs_one_side})");
+}
+
+.xl(@name, @value){
+    @media screen and (max-width: @break_xl){
+        @{name}: @value;
+    }
+}
+
+.xl-block(@content){
+    @media screen and (max-width: @break_xl){
+        @content();
+    }
 }
 
 .lg(@name, @value){
