--- a/src/styles/projects.module.less
+++ b/src/styles/projects.module.less
@@ -1,5 +1,15 @@
 @import './smart-grid.less';
 
-.debug {
+.debug1 {
   .debug(rgba(256, 256, 256, 0.1), 1px dotted #fff);
+}
+
+.wrapper {
+  .wrapper();
+  color: #fff;
+}
+
+.content {
+  .row-flex();
+  .md(flex-direction, column);
 }
