--- a/src/styles/projects.module.less
+++ b/src/styles/projects.module.less
@@ -1,15 +1,85 @@
 @import './smart-grid.less';
-
-.debug1 {
-  .debug(rgba(256, 256, 256, 0.1), 1px dotted #fff);
-}
-
-.wrapper {
-  .wrapper();
-  color: #fff;
-}
+@import './_variables.less';
 
 .content {
   .row-flex();
-  .md(flex-direction, column);
+  margin-bottom: 2rem;
+
+  h1 {
+    margin: 2rem @offset_one_side 1rem @offset_one_side;
+    .xs(font-size, 2.5rem);
+  }
+}
+
+li {
+  margin: 0;
+}
+
+.projects {
+  .col();
+  .size(12);
+  .size-md(11);
+  .size-sm(12);
+  margin: 1rem auto;
+}
+
+.project {
+  .row-flex();
+  align-items: center;
+  list-style-type: none;
+  padding: 0.75rem 0;
+  transition: all 0.2s;
+  .md(padding, 1rem 2rem);
+  .sm(padding, 1rem 0);
+
+  &__text {
+    .col();
+    .size(6);
+    .size-md(12);
+  }
+
+  &__image {
+    .col();
+    .size(6);
+    .size-md(12);
+    .md(margin-top, 1rem);
+  }
+
+  a {
+    color: @whitish;
+    text-decoration: none;
+  }
+
+  &__title {
+    margin-bottom: 1rem;
+    .xs(font-size, 1.5rem);
+  }
+
+  &__shortDesc {
+    margin-bottom: 0.5rem;
+    font-style: italic;
+  }
+
+  .links > a {
+    margin: 1rem 0.5rem 0.5rem 0;
+    display: inline-block;
+    width: 100px;
+    padding: 0.25rem;
+    border: 1px solid @whitish;
+    transition: all 0.2s;
+    text-align: center;
+
+    &:hover,
+    &:focus {
+      background: @whitish;
+      color: @bg-color;
+      transition: all 0.2s;
+    }
+  }
+
+  &:hover,
+  &:focus {
+    background: #730000;
+    transition: all 0.2s;
+  }
 }
