--- a/src/styles/skills.module.less
+++ b/src/styles/skills.module.less
@@ -1,7 +1,67 @@
 @import './smart-grid.less';
 @import './_assets.less';
 
+body {
+  min-height: auto;
+  margin-bottom: 2rem;
+}
+
 a {
   color: @whitish;
   text-decoration: none;
+}
+
+.description {
+  margin-top: 2rem;
+
+  p {
+    margin: 0.33rem auto;
+  }
+}
+
+.skills {
+  max-width: calc(900px + 2rem);
+  margin: 0 auto;
+  margin-top: 1rem;
+  list-style-type: none;
+
+  .skill {
+    display: flex;
+    justify-content: space-between;
+    padding: 0.7rem 1rem 0.3rem 1rem;
+    transition: all 0.2s;
+    .sm-block({flex-direction: column; align-items: center;});
+
+    h3 {
+      margin: 0;
+      margin-right: 1rem;
+      .sm(margin-bottom, 1rem);
+    }
+
+    &:hover,
+    &:focus {
+      background: #730000;
+      border-radius: 5px;
+      transition: all 0.2s;
+    }
+  }
+
+  .level {
+    display: flex;
+
+    span {
+      margin-left: 1rem;
+      font-weight: bold;
+      font-size: 1.4rem;
+    }
+  }
+
+  .other {
+    font-size: 1.25rem;
+    padding: 0.5rem 1rem;
+
+    span {
+      font-weight: bold;
+    }
+  }
 }
