--- a/src/styles/skills.module.less
+++ b/src/styles/skills.module.less
@@ -20,8 +20,7 @@ a {
 
 .skills {
   max-width: calc(900px + 2rem);
-  margin: 0 auto;
-  margin-top: 1rem;
+  margin: 1em auto;
   list-style-type: none;
 
   .skill {
@@ -39,7 +38,7 @@ a {
 
     &:hover,
     &:focus {
-      background: #730000;
+      background: @dark-hover;
       border-radius: 5px;
       transition: all 0.2s;
     }
