--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,10 +1,37 @@
 @import './smart-grid.less';
 @import './_assets.less';
-@import '../fonts/fonts.css';
+
+.reset();
+
+html {
+  font-size: 18px;
+  .xl(font-size, 16px);
+}
 
 body {
   background: @bg-color;
   min-height: 100vh;
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1,
+h2,
+h3 {
+  font-weight: 900;
+}
+
+h1 {
+  font-size: 3rem;
+  .xs(font-size, 2rem);
+}
+
+h2 {
+  font-size: 2rem;
+  .xs(font-size, 1.5rem);
+}
+
+h3 {
+  font-size: 1.35rem;
 }
 
 .wrapper {
