--- a/src/styles/projects.module.less
+++ b/src/styles/projects.module.less
@@ -9,10 +9,6 @@
     color: @whitish;
     text-decoration: none;
   }
-
-  .moreProjects a {
-    text-decoration: underline;
-  }
 }
 
 li {
@@ -25,6 +21,14 @@ li {
   .size-md(11);
   .size-sm(12);
   margin: 1rem auto;
+
+  .moreProjects {
+    margin-top: 1rem;
+
+    a {
+      text-decoration: underline;
+    }
+  }
 }
 
 .project {
