--- a/src/styles/skills.module.less
+++ b/src/styles/skills.module.less
@@ -10,56 +10,35 @@ a {
   text-decoration: none;
 }
 
-.description {
+.content {
+  font-size: 19px;
+  margin-bottom: 2rem;
+}
+
+main {
   margin-top: 1.5rem;
+
+  img {
+    width: 100%;
+    max-height: 200px;
+    object-fit: cover;
+    object-position: 0 0;
+    margin-bottom: 1rem;
+  }
 
   p {
     margin: 0.33rem auto;
   }
-}
 
-.skills {
-  max-width: calc(900px + 2rem);
-  margin: 1em auto;
-  list-style-type: none;
+  .skills {
+    margin-top: 2rem;
 
-  .skill {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.7rem 1rem 0.3rem 1rem;
-    transition: all 0.2s;
-    .sm-block({flex-direction: column; align-items: center;});
-
-    h3 {
-      margin: 0;
-      margin-right: 1rem;
-      .sm(margin-bottom, 1rem);
-    }
-
-    &:hover,
-    &:focus {
-      background: @dark-hover;
-      border-radius: 5px;
-      transition: all 0.2s;
-    }
-  }
-
-  .level {
-    display: flex;
-
-    span {
-      margin-left: 1rem;
+    .technologies {
       font-weight: bold;
-      font-size: 1.4rem;
     }
-  }
 
-  .other {
-    font-size: 1.25rem;
-    padding: 0.5rem 1rem;
-
-    span {
-      font-weight: bold;
+    .link {
+      text-decoration: underline;
     }
   }
 }
